--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,11 +9,20 @@
   <title>Movie</title>
 </head>
 <body>
-  <header >
-  <!-- ваш код здесь -->
-
+  <header>
+    <div>   
+    <img src="logo.png" alt="Кино и поиск">
+    </div>
+    <div class="navbar">
+      <div class="navbar-item">    
+        <img src="play.svg" alt="Онлайн-кинотеатр"> <h4>Онлайн-кинотеатр</h4>
+        <img src="oscar.svg " alt="Оскар"> <h4>Оскар 2023</h4> 
+         <div class="white-box"><span >фильмы, сериалы, пер</span>
+                </div> 
+       </div>                  
+                
+    </div>  
   </header>
-
 
 <main></main>
 </body>
