--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="navbar-item">    
         <img src="play.svg" alt="Онлайн-кинотеатр"> <h4>Онлайн-кинотеатр</h4>
         <img src="oscar.svg " alt="Оскар"> <h4>Оскар 2023</h4> 
-         <div class="white-box"><span >фильмы, сериалы, пер</span>
+         <div class="white-box"><span >фильмы, сериалы, передачи</span>
                 </div> 
        </div>                  
                 
